relax on some required fields for code repo publishing
